# py-template

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: CI.yml  ci.yml
scripts/: rename-from-template.py
src/py_template/: __init__.py
tests/: test_hello.py
